==== 2012.5.15 Ver X11 1.71875 beta4 ====
 * GolangPackage : enable local package
 * GolangDoc : golang api fmt#Println -> fmt.Println
 * LiteBuild : fix regexp error
==== 2012.5.2 Ver X11 1.71875 beta3 ===
 * GolangPackage : new golang package plugin for GO1
 * GolangPackage : PackageBrowser and PackageProject for GO1
 * GolangTool : remove the plugin
 * GolangDoc: add golang api for GO1
 * GolangDoc: add golang api filter
 * GolangAst: add filter
 * GolangAst: classview and outline
 * LiteEditor : compelter option
 * LiteApp : new file wizard support GO1
 * Welcome : new recent page
 * gopromake : update pkg depend

==== 2012.3.9 Ver X11 1.71875 beta2 ====
 * GolangPlay : new go playground plugin
 * GolangTool : sync editor, sync project

==== 2012.3.1 Ver X11 1.71875 beta1 ====
 * GolangTool : new golang plugin for GO1, import GOPATH project
 * GolangDoc : update to GO1
 * LiteBuild : update to GO1
 * tools : udpate all tools for GO1

==== 2011.9.26 Ver X10 1.5625 ====
 * LiteEditor : add line mark api
 * LiteDebug : new debug toolbar
 * LiteDebug : insert/remove break
 * LiteDebug : breakpoint and current line mark
 * GdbDebugger : async record view
 * GdbDebugger : variables expand tree
 * GdbDebugger : call stack view
 * GdbDebugger : load library view
 * TerminalEdit : provided to LiteBuild and LiteDebug 
 
==== 2011.9.14 Ver X9 1.40625 ====
 * LiteDebug : new debug manager plugin
 * GdbDebugger : new gdb debugger plugin
 * LiteBuild : add build config and custom
 * LiteFind : fix regexp use match case

==== 2011.9.1 Ver X8 1.25 ====
 * LiteFind : new find and replace plugin, remove CodeSearch plugin
 * LiteEditor : fix word api complete three parts error
 * LiteEditor : fix word api complete sorted
 * LiteApp : fix main window state load/save on linux
 * LiteApp : change path to standard linux path
 * LiteBuild : add build option, example execute arguments
 * FileBrowser : add new file wizard

==== 2011.8.12 Ver X7 1.09375 ====